# restchat

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  railway.toml  requirements.txt
.chainlit/: config.toml
deploy/: Dockerfile  entrypoint.sh
restchat/providers/: chatgpt.py  claude.py  gemini.py
