[tool.poetry]
name = "restchat"
version = "0.1.0rc1"
description = "Chat with advanced AI models using your own REST API Keys"
authors = ["Ndamulelo Nemakhavhani <ndamulelo@rihonegroup.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11, <4.0"
chainlit = "^1.3.0"
openai = "^1.52.2"
tiktoken = "^0.8.0"
tenacity = "^9.0.0"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
